# Winoground-Evaluating-CLIP-MCC225

./: .gitignore  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: checkpoints.yaml  experiment.yaml
data/curated/: examples.jsonl
data/embeddings/: winoground_real_vitb32.npz
docs/: DEFENSA_CODIGO.md  ENTREGA.md  GUION_PRESENTACION.md  HOJA_TRAZABILIDAD.md  INFORME.md  PLAN_20MIN.md  RESPUESTAS_PREGUNTAS.md
docs/adr/: 0001-dual-encoder-vs-deep-fusion.md
notebooks/: Winoground_Eval_MCC225.ipynb
outputs/metrics/: blindness.json  bootstrap_ci.csv  by_tag.csv  checkpoint_comparison.csv  failure_cases.json  faiss_demo.csv  per_example.csv  recall_vs_group.json  scores.json
scripts/: 00_verify_env.py  01_prepare_data.py  02_run_winoground.py  03_make_figures.py  build_notebook.py  validate_against_official.py
slides/latex/: defensa_winoground.tex
slides/pptx/: build_pptx.py  defensa_winoground.pptx
src/: blindness_probe.py  env_logging.py  error_analysis.py  metrics.py  openclip_utils.py  winoground_data.py  winoground_eval.py
tests/: test_metrics.py  test_winoground_eval.py
video/: README.md  make_video.py  narration.py  synth_kokoro.py
