[project]
name = "mcc225-winoground"
version = "0.1.0"
description = "Defensa técnica MCC225: evaluación de OpenCLIP en Winoground (razonamiento composicional)."
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [{ name = "Niels Victor Pacheco Barrios" }]
dependencies = [
    "torch>=2.2,<2.6",
    "open_clip_torch>=2.24,<3.4",
    "transformers>=4.40,<6",
    "datasets>=2.18,<6",
    "huggingface_hub>=0.23,<1",
    "faiss-cpu>=1.8,<2",
    "numpy>=1.26,<2.2",
    "pandas>=2.1,<3",
    "matplotlib>=3.8,<4",
    "scikit-learn>=1.4,<2",
    "Pillow>=10.0,<13",
    "PyYAML>=6.0,<7",
    "tqdm>=4.66,<5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "python-pptx>=0.6.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
